# Pred19

./: .gitignore  README.md  main.py  pyproject.toml
config/: settings.py
notebooks/: academic_notebook.ipynb
src/: features.py  preprocessing.py  train.py
