[project]
name = "pred19"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "mlflow>=3.9.0",
    "pydantic-settings>=2.13.0",
    "seaborn>=0.13.2",
    "shap>=0.49.1",
    "xgboost>=3.2.0",
]

[tool.uv.workspace]
members = [
    "pred19",
]
